Fix Modal height too small

--- a/packages/components/src/modal/style.scss
+++ b/packages/components/src/modal/style.scss
@@ -36,7 +36,7 @@
 		left: 50%;
 		min-width: $modal-min-width;
 		max-width: calc(100% - #{ $grid-unit-20 } - #{ $grid-unit-20 });
-		max-height: calc(100% - #{ $header-height } - #{ $header-height });
+		max-height: 90%;
 		transform: translate(-50%, -50%);
 
 		// Animate the modal frame/contents appearing on the page.
