--- a/packages/edit-post/src/components/manage-blocks-modal/style.scss
+++ b/packages/edit-post/src/components/manage-blocks-modal/style.scss
@@ -1,6 +1,6 @@
 .edit-post-manage-blocks-modal {
 	@include break-small() {
-		height: calc(100% - #{ $header-height } - #{ $header-height });
+		height: 90%;
 	}
 }
 
